Starting to test Eggs.Model

--- a/test/index.html
+++ b/test/index.html
@@ -17,7 +17,9 @@
   <script type="text/javascript" src="../Eggs.js"></script>
 
   <!-- TEST FILES -->
+  <script type="text/javascript" src="spec.helpers.js"></script>
   <script type="text/javascript" src="eggs.spec.js"></script>
+  <script type="text/javascript" src="eggs.model.spec.js"></script>
 
   <script type="text/javascript">
   	var console_reporter = new jasmine.ConsoleReporter();
