--- a/test/index.html
+++ b/test/index.html
@@ -22,7 +22,7 @@
   <script type="text/javascript" src="eggs.model.spec.js"></script>
 
   <script type="text/javascript">
-  	var console_reporter = new jasmine.ConsoleReporter();
+  	// var console_reporter = new jasmine.ConsoleReporter();
     (function() {
       var jasmineEnv = jasmine.getEnv();
       jasmineEnv.updateInterval = 1000;
@@ -30,7 +30,7 @@
       var htmlReporter = new jasmine.HtmlReporter();
 
       jasmineEnv.addReporter(htmlReporter);
-      jasmineEnv.addReporter(console_reporter);
+      // jasmineEnv.addReporter(console_reporter);
 
       jasmineEnv.specFilter = function(spec) {
         return htmlReporter.specFilter(spec);
