Refactored attributeNames to use attributes()

--- a/test/index.html
+++ b/test/index.html
@@ -20,6 +20,7 @@
   <script type="text/javascript" src="spec.helpers.js"></script>
   <script type="text/javascript" src="eggs.spec.js"></script>
   <script type="text/javascript" src="eggs.model.spec.js"></script>
+  <script type="text/javascript" src="eggs.collection.spec.js"></script>
 
   <script type="text/javascript">
   	// var console_reporter = new jasmine.ConsoleReporter();
